dev/05-message-brokers/emqx-uncurated/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emqx-uncurated
  labels:
    name: emqx-uncurated
    environment: dev
