dev/05-message-brokers/emqx-uncurated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-broker
  namespace: emqx-uncurated
  labels:
    app: emqx
    component: broker-uncurated
spec:
  type: ClusterIP
  ports:
  - name: mqtt
    port: YOUR_MQTT_PORT
    targetPort: YOUR_MQTT_PORT
    protocol: TCP
  - name: mqtts
    port: YOUR_MQTT_SSL_PORT
    targetPort: YOUR_MQTT_SSL_PORT
    protocol: TCP
  - name: ws
    port: YOUR_MQTT_WS_PORT
    targetPort: YOUR_MQTT_WS_PORT
    protocol: TCP
  - name: wss
    port: YOUR_MQTT_WSS_PORT
    targetPort: YOUR_MQTT_WSS_PORT
    protocol: TCP
  - name: dashboard
    port: YOUR_EMQX_DASHBOARD_PORT
    targetPort: YOUR_EMQX_DASHBOARD_PORT
    protocol: TCP
  selector:
    app: emqx
    component: broker-uncurated
